# dataeng-zoomcamp

./: README.md
01-docker-terraform/Issue/: 2026-01-15-Windows + Git Bash 환경에서 Docker 볼륨 마운트 버그 해결.md
01-docker-terraform/TIL/: 2026-01-15-error-log.md
01-docker-terraform/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  notebook2.ipynb  pipeline.py  pyproject.toml
01-docker-terraform/terraform/: variables.tf
02-workflow-orchestration/: docker-compose.yaml
02-workflow-orchestration/flows/: 01_hello_world.yaml  02_python.yaml  03_getting_started_data_pipeline.yaml  04_postgres_taxi.yaml  05_postgres_taxi_scheduled.yaml  06_gcp_kv.yaml  08_gcp_taxi.yaml  09_gcp_taxi_scheduled.yaml  10_chat_without_rag.yaml  11_chat_with_rag.yaml
Issue/: 2026-01-22-Kestra Python 오케스트레이션 트러블슈팅.md  2026-01-22-PostgreSQL 18 Docker Volumes 호환성 문제 해결.md  2026-01-28-Kestra GCS 스토리지(Service Account) 인증 트러블슈팅.md
homework/: 01_homework.md  02_homework.md
notes/: 1_docker-terraform.md  1_intro.md  2_workflow-orchestration.md  a
