[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]

# pyproject.toml 파일에 대한 설명:
# 이 파일은 Python 프로젝트의 메타데이터와 의존성 정보를 표준화된 TOML 형식으로 정의합니다.
# - [project] 섹션: 프로젝트 이름, 버전, 설명, 요구 Python 버전 등을 명시합니다.
# - dependencies: 프로젝트 실행에 필요한 외부 라이브러리(예: pandas, pyarrow)와 그 최소 버전을 선언합니다.
# 이 파일은 프로젝트의 기본 설정 및 의존성 요구사항을 명시하여
# 'uv'와 같은 패키지 관리 도구가 환경을 구축하는 데 사용됩니다.

# uv.lock 파일에 대한 설명:
# uv.lock 파일은 이 pyproject.toml에 정의된 의존성들과 그 하위 의존성들까지,
# 실제로 설치될 모든 라이브러리의 정확한 버전을 고정(lock)하는 파일입니다.
# 이 파일을 통해 모든 개발 환경에서 동일한 라이브러리 버전이 설치되도록 보장하여
# '내 컴퓨터에서는 되는데 네 컴퓨터에서는 안돼'와 같은 문제를 방지합니다.
# uv 명령(예: uv sync, uv add)에 의해 자동으로 관리되므로 직접 수정하지 않는 것이 좋습니다.
